# gservices

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/drive/: README.md  caching.md  files.md  paths.md  shell.md
docs/sheets/: README.md  cells.md  concurrency.md  formatting.md  metadata.md  sheets.md  snapshot.md  spreadsheet.md
gservices/: __init__.py  google_service.py  google_services.py  json_model.py  oauth2_scopes.py  print_utils.py
gservices/drive/: document_file.py  drive_service.py  file.py  file_list.py  folder.py  path.py  root.py  shared_drive.py  shortcut.py  spreadsheet_file.py  user_drive.py
gservices/gmail/: gmail_service.py  label.py  message.py  message_part.py  thread.py  thread_list.py
gservices/sheets/: border_format.py  cell.py  cell_format.py  cell_value.py  column.py  columns.py  developer_metadata.py  dimension.py  row.py  rows.py  sheet.py  sheets_service.py  snapshot.py  spreadsheet.py  utils.py
tests/: conftest.py  test_drive.py  test_json_model.py  test_sheets_core.py  test_snapshot.py  test_snapshot_e2e.py
typings/google_auth_oauthlib/: flow.pyi  helpers.pyi  interactive.pyi
typings/googleapiclient/: model.pyi
