[build-system]
  build-backend = "setuptools.build_meta"
  requires = ["setuptools>=68", "setuptools-scm>=8.0"]

[project]
  authors = [{ name = "Pasha Stetsenko", email = "stpasha@gmail.com" }]
  classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
  ]
  description = "Library for accessing Google API Services"
  dynamic = ["dependencies"]
  keywords = []
  name = "gservices"
  readme = "README.md"
  requires-python = ">=3.12"
  version = "0.1.0"

  [project.urls]
    Source = "https://github.com/st-pasha/gservices"

[tool.pyright]
  typeCheckingMode = "strict"
  reportPrivateUsage = false

  # Unknown types often occur in external libraries.
  reportUnknownMemberType = false

[tool.setuptools]
  packages = ["gservices"]

[tool.setuptools.dynamic]
  dependencies = { file = ["requirements.txt"] }
