[build-system]
  build-backend = "hatchling.build"
  requires = ["hatchling"]

[project]
  authors = [{ name = "Pasha Stetsenko", email = "stpasha@gmail.com" }]
  classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
  ]
  description = "Library for accessing Google API Services"
  dependencies = [
    "google-api-python-client>=2.151.0",
    "google-api-python-client-stubs>=1.28.0",
    "google-auth-oauthlib>=1.2.1",
  ]
  keywords = []
  name = "gservices"
  readme = "README.md"
  requires-python = ">=3.12"
  version = "0.1.0"

  [project.urls]
    Source = "https://github.com/st-pasha/gservices"

[tool.hatch.build.targets.wheel]
  packages = ["gservices"]

[tool.pyright]
  typeCheckingMode = "strict"
  reportPrivateUsage = false

  # Unknown types often occur in external libraries.
  reportUnknownMemberType = false
